--- a/app/build.gradle
+++ b/app/build.gradle
@@ -157,8 +157,8 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-rxjava2:$room_version"
-    def work_version = "1.0.0-alpha09"
-    implementation "android.arch.work:work-runtime-ktx:$work_version"
+    def work_version = "2.0.0"
+    implementation "androidx.work:work-runtime-ktx:$work_version"
     def paging_version = "2.0.0-rc01"
     implementation "androidx.paging:paging-runtime:$paging_version"
 
@@ -223,7 +223,7 @@ dependencies {
     androidTestImplementation junit4
     androidTestImplementation "androidx.arch.core:core-testing:$lifecycle_version"
     androidTestImplementation "android.arch.navigation:navigation-testing-ktx:$nav_version"
-    androidTestImplementation "android.arch.work:work-testing:$work_version"
+    androidTestImplementation "androidx.work:work-testing:$work_version"
 
     testImplementation junit4
     testImplementation "org.robolectric:robolectric:3.1.2"
